Jnaneshwari Adhyay 1 sample epub reader view

--- a/examples/hooks.html
+++ b/examples/hooks.html
@@ -1,100 +1,108 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>EPUB.js Single Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>EPUB.js Single Example</title>
 
-  <script src="../dist/epub.js"></script>
+    <script src="../dist/epub.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="examples.css">
+    <link rel="stylesheet" type="text/css" href="examples.css">
 
 </head>
 <body>
-  <a id="prev" href="#prev" class="navlink">...</a>
-  <div id="viewer" class="scrolled"></div>
-  <a id="next" href="#next" class="navlink">...</a>
+<a id="prev" href="#prev" class="navlink">...</a>
+<div id="viewer" class="scrolled"></div>
+<a id="next" href="#next" class="navlink">...</a>
 
-  <script>
-    var currentSectionIndex = 8;
-    // Load the opf
-    var book = ePub("https://s3.amazonaws.com/epubjs/books/moby-dick/OPS/package.opf");
-    var rendition = book.renderTo("viewer", { flow: "scrolled-doc" });
+<script>
+	var currentSectionIndex = 8;
+	// Load the opf
+	var book = ePub("https://s3.amazonaws.com/epubjs/books/moby-dick/OPS/package.opf");
+	var rendition = book.renderTo("viewer", {
+		flow: 'paginated',
+        width: "100%",
+		height: 400,
+		allowScriptedContent: true
+	});
 
-    rendition.display("chapter_001.xhtml");
-
-
-    var next = document.getElementById("next");
-    next.addEventListener("click", function(e){
-      rendition.next();
-      e.preventDefault();
-    }, false);
-
-    var prev = document.getElementById("prev");
-    prev.addEventListener("click", function(e){
-      rendition.prev();
-      e.preventDefault();
-    }, false);
+	rendition.display("chapter_001.xhtml");
 
 
+	var next = document.getElementById("next");
+	next.addEventListener("click", function (e) {
+		rendition.next();
+		e.preventDefault();
+	}, false);
 
-    rendition.on("rendered", function(section){
-      var nextSection = section.next();
-      var prevSection = section.prev();
+	var prev = document.getElementById("prev");
+	prev.addEventListener("click", function (e) {
+		rendition.prev();
+		e.preventDefault();
+	}, false);
 
-      if(nextSection) {
-        nextNav = book.navigation.get(nextSection.href);
 
-        if(nextNav) {
-          nextLabel = nextNav.label;
-        } else {
-          nextLabel = "next";
-        }
+	rendition.on("rendered", function (section) {
+		var nextSection = section.next();
+		var prevSection = section.prev();
 
-        next.textContent = nextLabel + " »";
-      } else {
-        next.textContent = "";
-      }
+		if (nextSection) {
+			nextNav = book.navigation.get(nextSection.href);
 
-      if(prevSection) {
-        prevNav = book.navigation.get(prevSection.href);
+			if (nextNav) {
+				nextLabel = nextNav.label;
+			} else {
+				nextLabel = "next";
+			}
 
-        if(prevNav) {
-          prevLabel = prevNav.label;
-        } else {
-          prevLabel = "previous";
-        }
+			next.textContent = nextLabel + " »";
+		} else {
+			next.textContent = "";
+		}
 
-        prev.textContent = "« " + prevLabel;
-      } else {
-        prev.textContent = "";
-      }
+		if (prevSection) {
+			prevNav = book.navigation.get(prevSection.href);
 
-    });
+			if (prevNav) {
+				prevLabel = prevNav.label;
+			} else {
+				prevLabel = "previous";
+			}
 
-    // Hooks
+			prev.textContent = "« " + prevLabel;
+		} else {
+			prev.textContent = "";
+		}
 
-    // Add a single script
-    rendition.hooks.content.register(function(contents){
-     return contents.addScript("https://code.jquery.com/jquery-2.1.4.min.js")
-       .then(function(){
-            // init code
-       });
-    });
+	});
 
-    // Add several scripts / css
-    rendition.hooks.content.register(function(contents){
+	// Hooks
 
-        var loaded = Promise.all([
-            contents.addScript("https://code.jquery.com/jquery-2.1.4.min.js"),
-            contents.addStylesheet("http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.css")
-        ]);
+	// Add a single script
+	rendition.hooks.content.register(function (contents) {
+		console.log("Registration hooks added");
+		return contents.addScript("https://code.jquery.com/jquery-2.1.4.min.js")
+			.then(function () {
+				// init code
+				console.log("jQuery script added");
+			});
+	});
 
-        // return loaded promise
-        return loaded;
-    });
+	// Add several scripts / css
+	// rendition.hooks.content.register(function(contents){
+	//
+	//     var loaded = Promise.all([
+	//         contents.addScript("https://code.jquery.com/jquery-2.1.4.min.js"),
+	//         contents.addStylesheet("http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.css")
+	//     ]);
+	//
+	//     console.log("jQuery script added")
+	//  
+	//     // return loaded promise
+	//     return loaded;
+	// });
 
-  </script>
+</script>
 
 </body>
 </html>
